<resources>
    <string name="app_name">La Boutique Della Frutta</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ricordati">Ricordati</string>
    <string name="accedi">Accedi</string>
    <string name="non_hai_ancora_un_account">Non hai ancora un account?</string>
    <string name="registrati">Registrati</string>
    <string name="home">Home</string>
    <string name="ordini">Ordini</string>
    <string name="profilo">Profilo</string>
    <string name="info">Info</string>
</resources>
