<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix"
    android:background="@drawable/gradient_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:color/white"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            android:theme="@style/TextAppearance.App.TextinputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:textColor="@android:color/black"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textSize="17sp"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            android:theme="@style/TextAppearance.App.TextinputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textSize="17sp"
                />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbricorda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ricordati"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/btnAccedi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/rounded_button"
                android:padding="8dp"
                android:text="@string/accedi"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_hai_ancora_un_account"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="32dp"/>

        <Button
            android:id="@+id/btnRegistrati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:padding="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/registrati"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</LinearLayout>